@@ -78,3 +78,4 @@ gsub_fixed = function(...) gsub(..., fixed = TRUE)
 readUTF8 = function(file, ...) readLines(file, encoding = 'UTF-8', warn = FALSE, ...)
 writeUTF8 = function(text, ...) writeLines(enc2utf8(text), ..., useBytes = TRUE)
 
+pandoc2.0 = function() rmarkdown::pandoc_available('2.0')
